@@ -220,14 +220,7 @@ module Make (T : TABLE) = struct
 
   and initiate env : void =
     assert (env.shifted >= 0);
-    if T.recovery && env.shifted = 0 then begin
-      Log.discarding_last_token (T.token2terminal env.token);
-      discard env;
-      env.shifted <- 0;
-      action env
-    end
-    else
-      errorbookkeeping env
+    errorbookkeeping env
 
   and errorbookkeeping env =
     Log.initiating_error_handling();
